Changed background colors (fixed bg not visible issue), changed loader colors

--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,10 +1,11 @@
 .loader {    
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid blue;
-    border-right: 16px solid green;
-    border-bottom: 16px solid red;
-    border-left: 16px solid pink;
+    border-top: 16px solid #692E73;
+    border-bottom: 16px solid #692E73;
+    border-right: 16px solid #343a40;
+    border-left: 16px solid #343a40;
+    /* border-left: 16px solid #ffeb3b; */
     width: 60px;
     height: 60px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
