--- a/src/components/Spinner/CubeSpinner.css
+++ b/src/components/Spinner/CubeSpinner.css
@@ -6,7 +6,7 @@
 }
 
 .cube1, .cube2 {
-    background-color: #888;
+    background-color: #a9afbbd1;
     width: 15px;
     height: 15px;
     position: absolute;
